# numic

./: .gitignore  LICENSE  README.md  pyproject.toml
src/numic/: __init__.py  main.py
src/numic/api/schemas/: __init__.py  demo.py  measurement.py  scoring.py
src/numic/api/v1/: demo_router.py  router.py
src/numic/cli/: __init__.py  measure.py
src/numic/core/: config.py
src/numic/db/: session.py
src/numic/db/models/: __init__.py  tables.py
src/numic/measurement/: __init__.py  extractor.py  frame.py  geometry.py  io.py  landmarks.py  manual_entry.py  pipeline.py  tabular_import.py
src/numic/scoring/: __init__.py  aggregate.py
src/numic/scoring/clinical/: __init__.py  service.py
src/numic/scoring/progression/: __init__.py  service.py
src/numic/scoring/rules/: __init__.py  bundles.py  models.py
src/numic/scoring/static/: __init__.py  service.py
tests/: test_demo_endpoint.py  test_manual_entry.py  test_measurement.py  test_scoring.py  test_tabular_import.py
